# satisfactory-data

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  test.json
aextract/: Cargo.toml  build.rs
aextract/AExSidecar/: AExSidecar.csproj  Program.cs
aextract/src/: cli.rs  error.rs  main.rs
aextract/src/generation/: cleaned.rs  mod.rs  raw.rs
aextract/src/types/: mod.rs
aextract/src/types/satisfactory_raw/: building.rs  description.rs  generator.rs  mod.rs  recipe.rs  research.rs  uestring.rs  utility.rs
satisfactory-data/: Cargo.toml
satisfactory-data-macros/: Cargo.toml
satisfactory-data-macros/src/: lib.rs  model.rs
satisfactory-data/src/: error.rs  lib.rs  registry.rs
satisfactory-data/src/types/: buildable.rs  description.rs  id.rs  mod.rs  recipe.rs  research.rs
scratchpad/: Cargo.toml
scratchpad/src/: main.rs
