[package]
name = "aextract"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo"] }
satisfactory-data.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"

[build-dependencies]
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = { version = "0.12.15", features = ["blocking"] }
syn = { version = "2.0.101", features = ["full"] }
