[package]
name = "satisfactory-data-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust crate and associated binary tool to extract and parse Satisfactory game files (Macros)"
homepage = "https://github.com/dax-dot-gay/satisfactory-data"
repository = "https://github.com/dax-dot-gay/satisfactory-data"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
manyhow = { version = "0.11.4" }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
