[package]
name = "satisfactory-data"
version = "0.1.0"
edition = "2024"

[dependencies]
convert_case = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
satisfactory-data-macros.workspace = true
specta_02 = { package = "specta", version = "2.0.0-rc.24", features = ["serde_json", "std", "derive"], optional = true }
specta_01 = { package = "specta", version = "1.0.5", features = ["serde", "typescript"], optional = true }

[features]
default = ["specta-2"]
specta-1 = ["dep:specta_01"]
specta-2 = ["dep:specta_02"]
